--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -126,8 +126,11 @@
     "    #!git clone https://github.com/s0md3v/sd-webui-roop\n",
     "    #!sed -i 's|shapes.append(chunk\\[\"score\"\\] > 0.7)|shapes.append(chunk[\"score\"] > 99999)|' /home/studio-lab-user/SDZ/extensions/sd-webui-roop/scripts/cimage.py\n",
     "\n",
-    "    #!git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
-    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/models/Stable-diffusion -o mm_sd_v15_v2.ckpt\n",
+    "    #!mkdir -p /tmp/animatediff_models\n",
+    "    #!rm -rd ~/SDZ/extensions/sd-webui-animatediff/model\n",
+    "    #!ln -vs /tmp/animatediff_models /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model -o mm_sd_v15_v2.ckpt\n",
+    "\n",
     "    #!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-controlnet-animatediff\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-animatediff-for-ControlNet\n",
@@ -372,13 +375,13 @@
     "    print(COLOR_CYAN + \"MODELS UPDATED\" + COLOR_RESET)\n",
     "    \n",
     "def opcion3():\n",
-    "    clear_output()\n",
     "    %cd /home/studio-lab-user/SDZ\n",
     "    clear_output()\n",
+    "\n",
     "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
     "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
     "    print(\" \")\n",
-    "    ngrok_token = input(\" Insert ngrok token: \")\n",
+    "    ngrok_token = input(\" Insert ngrok token:\")\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
     "    SDZ_Args = f\"--ngrok {ngrok_token} --api --share --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle --disable-console-progressbars\"\n",
