--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -53,11 +53,11 @@
     "    #Config\n",
     "    %cd /home/studio-lab-user/SDZ\n",
     "\n",
+    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/notification.mp3 -O notification.mp3\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
     "    \n",
-    "\n",
     "    #!pip install -r /home/studio-lab-user/SDZ/requirements_versions.txt\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ INSTALLED\" + COLOR_RESET)\n",
@@ -126,6 +126,7 @@
     "    #!git clone https://github.com/s0md3v/sd-webui-roop\n",
     "    #!sed -i 's|shapes.append(chunk\\[\"score\"\\] > 0.7)|shapes.append(chunk[\"score\"] > 99999)|' /home/studio-lab-user/SDZ/extensions/sd-webui-roop/scripts/cimage.py\n",
     "\n",
+    "    #!git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
     "    #!mkdir -p /tmp/animatediff_models\n",
     "    #!rm -rd ~/SDZ/extensions/sd-webui-animatediff/model\n",
     "    #!ln -vs /tmp/animatediff_models /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model\n",
