--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -95,14 +95,25 @@
     "    !ln -vs /tmp/models /home/studio-lab-user/SDZ/models/Stable-diffusion\n",
     "    %cd ~/SDZ/models/Stable-diffusion\n",
     "\n",
-    "    #model 1.5\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/15236\n",
-    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/130072\n",
-    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/135166\n",
-    "    #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
+    "    models15 = \"1\"\n",
+    "    modelsXL = \"0\"\n",
     "\n",
-    "    #model Xl\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/190908\n",
+    "    def mainmodels():\n",
+    "        if models15 == \"1\":\n",
+    "\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/15236\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/130072\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/135166\n",
+    "            #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
+    "\n",
+    "        if modelsXL == \"1\":\n",
+    "\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/190908\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/166909\n",
+    "\n",
+    "    mainmodels()\n",
+    "\n",
+    "\n",
     "\n",
     "    #extensions\n",
     "    %cd ~/SDZ/extensions\n",
@@ -229,7 +240,7 @@
     "    ctrlnet15 = \"1\"\n",
     "    ctrlnetXL = \"0\"\n",
     "\n",
-    "    def main():\n",
+    "    def mainctrl():\n",
     "        if ctrlnet15 == \"1\":\n",
     "\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny_fp16.safetensors -o control_v11p_sd15_canny_fp16.safetensors\n",
@@ -334,7 +345,7 @@
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose.safetensors -o thibaud_xl_openpose.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose_256lora.safetensors -o thibaud_xl_openpose_256lora.safetensors\n",
     "\n",
-    "    main()\n",
+    "    mainctrl()\n",
     "\n",
     "    !mkdir -p /tmp/ESRGAN\n",
     "    !rm -rd ~/SDZ/models/ESRGAN\n",
