--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -95,8 +95,11 @@
     "    !ln -vs /tmp/models /home/studio-lab-user/SDZ/models/Stable-diffusion\n",
     "    %cd ~/SDZ/models/Stable-diffusion\n",
     "\n",
+    "    #options for models and controlnet\n",
     "    models15 = \"1\"\n",
     "    modelsXL = \"0\"\n",
+    "    ctrlnet15 = \"1\"\n",
+    "    ctrlnetXL = \"0\"\n",
     "\n",
     "    def mainmodels():\n",
     "        if models15 == \"1\":\n",
@@ -112,8 +115,6 @@
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/166909\n",
     "\n",
     "    mainmodels()\n",
-    "\n",
-    "\n",
     "\n",
     "    #extensions\n",
     "    %cd ~/SDZ/extensions\n",
@@ -237,9 +238,6 @@
     "    !ln -vs /tmp/controlnet_models /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/models\n",
     "    %cd ~/SDZ/extensions/sd-webui-controlnet/models\n",
     "\n",
-    "    ctrlnet15 = \"1\"\n",
-    "    ctrlnetXL = \"0\"\n",
-    "\n",
     "    def mainctrl():\n",
     "        if ctrlnet15 == \"1\":\n",
     "\n",
@@ -310,26 +308,26 @@
     "\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/diffusers_xl_canny_small.safetensors -o diffusers_xl_canny_small.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/diffusers_xl_depth_small.safetensors -o diffusers_xl_depth_small.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/ip-adapter_xl.pth -o ip-adapter_xl.pth\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_blur.safetensors -o kohya_controllllite_xl_blur.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_blur_anime.safetensors -o kohya_controllllite_xl_blur_anime.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_blur_anime_beta.safetensors -o kohya_controllllite_xl_blur_anime_beta.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/ip-adapter_xl.pth -o ip-adapter_xl.pth\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_blur.safetensors -o kohya_controllllite_xl_blur.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_blur_anime.safetensors -o kohya_controllllite_xl_blur_anime.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_blur_anime_beta.safetensors -o kohya_controllllite_xl_blur_anime_beta.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_canny.safetensors -o kohya_controllllite_xl_canny.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_canny_anime.safetensors -o kohya_controllllite_xl_canny_anime.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_canny_anime.safetensors -o kohya_controllllite_xl_canny_anime.safetensors\n",
     "\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_depth.safetensors -o kohya_controllllite_xl_depth.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_depth_anime.safetensors -o kohya_controllllite_xl_depth_anime.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_openpose_anime.safetensors -o kohya_controllllite_xl_openpose_anime.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_depth_anime.safetensors -o kohya_controllllite_xl_depth_anime.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_openpose_anime.safetensors -o kohya_controllllite_xl_openpose_anime.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_openpose_anime_v2.safetensors -o kohya_controllllite_xl_openpose_anime_v2.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_scribble_anime.safetensors -o kohya_controllllite_xl_scribble_anime.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/kohya_controllllite_xl_scribble_anime.safetensors -o kohya_controllllite_xl_scribble_anime.safetensors\n",
     "            \n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sai_xl_canny_128lora.safetensors -o sai_xl_canny_128lora.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sai_xl_depth_128lora.safetensors -o sai_xl_depth_128lora.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sai_xl_recolor_128lora.safetensors -o sai_xl_recolor_128lora.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sai_xl_canny_128lora.safetensors -o sai_xl_canny_128lora.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sai_xl_depth_128lora.safetensors -o sai_xl_depth_128lora.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sai_xl_recolor_128lora.safetensors -o sai_xl_recolor_128lora.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sai_xl_sketch_128lora.safetensors -o sai_xl_sketch_128lora.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sargezt_xl_depth.safetensors -o sargezt_xl_depth.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sargezt_xl_depth_faid_vidit.safetensors -o sargezt_xl_depth_faid_vidit.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sargezt_xl_depth_zeed.safetensors -o sargezt_xl_depth_zeed.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sargezt_xl_depth.safetensors -o sargezt_xl_depth.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sargezt_xl_depth_faid_vidit.safetensors -o sargezt_xl_depth_faid_vidit.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sargezt_xl_depth_zeed.safetensors -o sargezt_xl_depth_zeed.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/sargezt_xl_softedge.safetensors -o sargezt_xl_softedge.safetensors\n",
     "\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_diffusers_xl_canny.safetensors -o t2i-adapter_diffusers_xl_canny.safetensors\n",
@@ -337,12 +335,11 @@
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_diffusers_xl_depth_zoe.safetensors -o t2i-adapter_diffusers_xl_depth_zoe.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_diffusers_xl_lineart.safetensors -o t2i-adapter_diffusers_xl_lineart.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_diffusers_xl_openpose.safetensors -o t2i-adapter_diffusers_xl_openpose.safetensors\n",
-    "            \n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_diffusers_xl_sketch.safetensors -o t2i-adapter_diffusers_xl_sketch.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_xl_canny.safetensors -o t2i-adapter_xl_canny.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_xl_openpose.safetensors -o t2i-adapter_xl_openpose.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_xl_sketch.safetensors -o t2i-adapter_xl_sketch.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose.safetensors -o thibaud_xl_openpose.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_xl_canny.safetensors -o t2i-adapter_xl_canny.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_xl_openpose.safetensors -o t2i-adapter_xl_openpose.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_xl_sketch.safetensors -o t2i-adapter_xl_sketch.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose.safetensors -o thibaud_xl_openpose.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose_256lora.safetensors -o thibaud_xl_openpose_256lora.safetensors\n",
     "\n",
     "    mainctrl()\n",
