--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -26,14 +26,15 @@
     "\n",
     "    #!conda install -c conda-forge libglib -y & conda update -n base conda -y\n",
     "\n",
-    "    #!pip install -q --upgrade pip\n",
+    "    !pip install -q --upgrade torchsde\n",
+    "    !pip install -q --upgrade pip\n",
     "    !pip install -q --upgrade psutil\n",
-    "    #!pip install -q --upgrade torchsde\n",
-    "    #!pip install -q pytz\n",
+    "    !pip install -q pytz\n",
     "    #!pip install -q tensorflow\n",
     "    \n",
+    "    %conda update -q -n base conda\n",
+    "    %conda install -q -c conda-forge gputil\n",
     "    %conda install -q -y aria2\n",
-    "    %conda install -q -y libglib2.0-0\n",
     "    %conda install -q -y glib\n",
     "    %pip install -q opencv-python-headless huggingface-hub\n",
     "    !pip3 install --upgrade requests\n",
@@ -463,7 +464,7 @@
     "    ngrok_token = input(\" Insert ngrok token:\")\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
-    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --share --enable-insecure-extension-access --xformers --theme=dark --medvram-sdxl --no-download-sd-model --disable-safe-unpickle --disable-console-progressbars\"\n",
+    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --share --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
