--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -108,7 +108,7 @@
     "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\n",
     "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\n",
     "    !git clone https://github.com/zanllp/sd-webui-infinite-image-browsing\n",
-    "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser\n",
+    "    #!git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser\n",
     "    !git clone https://github.com/yankooliveira/sd-webui-photopea-embed\n",
     "    !git clone https://github.com/Physton/sd-webui-prompt-all-in-one\n",
     "    !git clone https://github.com/ArtVentureX/sd-webui-agent-scheduler\n",
@@ -464,7 +464,7 @@
     "    ngrok_token = input(\" Insert ngrok token:\")\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
-    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --share --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
+    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
