--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -505,11 +505,13 @@
     "            print(\" \")\n",
     "            print(\"1. Update SDZ\")\n",
     "            print(\"2. Install DreamBooth\")\n",
-    "            print(\"3. List all Folder and files\")\n",
-    "            print(\"4. Check Space Disk\")\n",
-    "            print(\"5. Clean Cache\")\n",
-    "            print(\"6. Delete All\")\n",
-    "            print(\"7. Compress Output Folder\")\n",
+    "            print(\"3. Compress Output Folder\")\n",
+    "            print(\"4. List all Folder and files\")\n",
+    "            print(\"5. Check Space Disk\")\n",
+    "            print(\"6. Clean Cache\")\n",
+    "            print(\"7. Clean space - only restart the Jupyter Lab\")\n",
+    "            print(\"8. Delete all - need restart all the runtime\")\n",
+    "\n",
     "            print(\"0. Back to Main Menu\")\n",
     "            print(\" \")\n",
     "\n",
@@ -532,41 +534,6 @@
     "                print(COLOR_CYAN + \"DREAMBOOTH INSTALLED\" + COLOR_RESET)\n",
     "\n",
     "            elif sub_opcion == \"3\":\n",
-    "                clear_output()\n",
-    "                !du -h --max-depth=1 /home/studio-lab-user\n",
-    "                print(COLOR_CYAN + \"LIST ALL\" + COLOR_RESET)\n",
-    "                \n",
-    "            elif sub_opcion == \"4\":\n",
-    "                !pip install -q --upgrade psutil\n",
-    "                clear_output()\n",
-    "                import os\n",
-    "                import psutil\n",
-    "                directory = os.getcwd()\n",
-    "                disk_space = psutil.disk_usage(directory)\n",
-    "                total = disk_space.total / (1024 ** 3)\n",
-    "                used = disk_space.used / (1024 ** 3)\n",
-    "                free = disk_space.free / (1024 ** 3)\n",
-    "                clear_output()\n",
-    "                print(COLOR_CYAN + f\"TOTAL STORAGE: [ {total:.2f} GB ] USED: [ {used:.2f} GB ] FREE: [ {free:.2f} GB ]\" + COLOR_RESET)\n",
-    "                \n",
-    "            elif sub_opcion == \"5\":\n",
-    "                clear_output()\n",
-    "                !pip cache purge\n",
-    "                !rm -rf ~/.cache\n",
-    "                clear_output()\n",
-    "                print(COLOR_CYAN + \"CLEANED UNNECESSARY CACHE/FILES\" + COLOR_RESET)\n",
-    "                \n",
-    "            elif sub_opcion == \"6\":\n",
-    "                clear_output()\n",
-    "                #!rm -r /home/studio-lab-user/.cache\n",
-    "                #!rm -r /home/studio-lab-user/.conda\n",
-    "                #!conda remove -n \"env_name\" --all\n",
-    "                #!rm -rf /home/studio-lab-user/*\n",
-    "                !rm -rf /home/studio-lab-user/\n",
-    "                clear_output()\n",
-    "                print(COLOR_CYAN + \"RUN THIS CELL, IT WILL DELETE ENTIRE NOTEBOOK, OR IF YOU WANT A FRESH-INSTALL NOTEBOOK, then DO : RUN THIS CELL > STOP RUNTIME - STAR AGAIN\" + COLOR_RESET)\n",
-    "                \n",
-    "            elif sub_opcion == \"7\":\n",
     "                clear_output()\n",
     "\n",
     "                import os\n",
@@ -603,6 +570,62 @@
     "                # Create zip files with a maximum size of 20MB\n",
     "                zip_folder(input_folder, output_folder, max_size_mb)\n",
     "                print(COLOR_CYAN + \"COMPRESS OUTPUT FOLDER IN /home/studio-lab-user\" + COLOR_RESET)\n",
+    "\n",
+    "            elif sub_opcion == \"4\":\n",
+    "                clear_output()\n",
+    "                !du -h --max-depth=1 /home/studio-lab-user\n",
+    "                print(COLOR_CYAN + \"LIST ALL\" + COLOR_RESET)\n",
+    "                \n",
+    "            elif sub_opcion == \"5\":\n",
+    "                !pip install -q --upgrade psutil\n",
+    "                clear_output()\n",
+    "                import os\n",
+    "                import psutil\n",
+    "                directory = os.getcwd()\n",
+    "                disk_space = psutil.disk_usage(directory)\n",
+    "                total = disk_space.total / (1024 ** 3)\n",
+    "                used = disk_space.used / (1024 ** 3)\n",
+    "                free = disk_space.free / (1024 ** 3)\n",
+    "                clear_output()\n",
+    "                print(COLOR_CYAN + f\"TOTAL STORAGE: [ {total:.2f} GB ] USED: [ {used:.2f} GB ] FREE: [ {free:.2f} GB ]\" + COLOR_RESET)\n",
+    "                \n",
+    "            elif sub_opcion == \"6\":\n",
+    "                clear_output()\n",
+    "                !pip cache purge\n",
+    "                !rm -rf ~/.cache\n",
+    "                clear_output()\n",
+    "                print(COLOR_CYAN + \"CLEANED UNNECESSARY CACHE/FILES\" + COLOR_RESET)\n",
+    "\n",
+    "            elif sub_opcion == \"7\":\n",
+    "                clear_output()\n",
+    "                import subprocess\n",
+    "                !rm -r /home/studio-lab-user/.cache\n",
+    "                !rm -r /home/studio-lab-user/.conda\n",
+    "                !conda remove -n \"env_name\" --all\n",
+    "                !rm -rf /home/studio-lab-user/*\n",
+    "                \n",
+    "\n",
+    "                # Run the command and capture the output\n",
+    "                result = subprocess.run(['du', '-h', '--max-depth=1', '/home/studio-lab-user'], capture_output=True, text=True)\n",
+    "\n",
+    "                # Check if the desired line is present in the output\n",
+    "                if '1.1G\\t/home/studio-lab-user/.conda' in result.stdout:\n",
+    "\n",
+    "                clear_output()\n",
+    "                print(COLOR_CYAN + \"NOW YOU HAVE A CLEAN SPACE, then DO > RESTART JUPYTER LAB\" + COLOR_RESET)\n",
+    "                \n",
+    "                \n",
+    "            elif sub_opcion == \"8\":\n",
+    "                clear_output()\n",
+    "                #!rm -r /home/studio-lab-user/.cache\n",
+    "                #!rm -r /home/studio-lab-user/.conda\n",
+    "                #!conda remove -n \"env_name\" --all\n",
+    "                #!rm -rf /home/studio-lab-user/*\n",
+    "                !rm -rf /home/studio-lab-user/\n",
+    "                clear_output()\n",
+    "                print(COLOR_CYAN + \"NOW YOU HAVE A CLEAN ENV, then DO > STOP RUNTIME - STAR AGAIN\" + COLOR_RESET)\n",
+    "                \n",
+    "            \n",
     "            \n",
     "            elif sub_opcion == \"0\":\n",
     "                break  # Sal del menú de actualización y regresa al menú principal\n",
