--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -509,8 +509,8 @@
     "            print(\"4. List all Folder and files\")\n",
     "            print(\"5. Check Space Disk\")\n",
     "            print(\"6. Clean Cache\")\n",
-    "            print(\"7. Clean space - only restart the Jupyter Lab\")\n",
-    "            print(\"8. Delete all - need restart all the runtime\")\n",
+    "            print(\"7. Clean Space - Only restart the Jupyter Lab\")\n",
+    "            print(\"8. Delete All - Need restart all the runtime\")\n",
     "\n",
     "            print(\"0. Back to Main Menu\")\n",
     "            print(\" \")\n",
@@ -598,18 +598,10 @@
     "\n",
     "            elif sub_opcion == \"7\":\n",
     "                clear_output()\n",
-    "                import subprocess\n",
     "                !rm -r /home/studio-lab-user/.cache\n",
     "                !rm -r /home/studio-lab-user/.conda\n",
     "                !conda remove -n \"env_name\" --all\n",
     "                !rm -rf /home/studio-lab-user/*\n",
-    "                \n",
-    "\n",
-    "                # Run the command and capture the output\n",
-    "                result = subprocess.run(['du', '-h', '--max-depth=1', '/home/studio-lab-user'], capture_output=True, text=True)\n",
-    "\n",
-    "                # Check if the desired line is present in the output\n",
-    "                if '1.1G\\t/home/studio-lab-user/.conda' in result.stdout:\n",
     "\n",
     "                clear_output()\n",
     "                print(COLOR_CYAN + \"NOW YOU HAVE A CLEAN SPACE, then DO > RESTART JUPYTER LAB\" + COLOR_RESET)\n",
@@ -625,8 +617,6 @@
     "                clear_output()\n",
     "                print(COLOR_CYAN + \"NOW YOU HAVE A CLEAN ENV, then DO > STOP RUNTIME - STAR AGAIN\" + COLOR_RESET)\n",
     "                \n",
-    "            \n",
-    "            \n",
     "            elif sub_opcion == \"0\":\n",
     "                break  # Sal del menú de actualización y regresa al menú principal\n",
     "            else:\n",
