--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -10,6 +10,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import shutil\n",
     "from IPython.display import clear_output, Image, display, HTML\n",
     "from IPython.utils import capture\n",
     "import requests\n",
@@ -66,6 +67,13 @@
     "\n",
     "def extensions_code():\n",
     "    %conda install -q -y aria2\n",
+    "\n",
+    "    folderext = '/home/studio-lab-user/SDZ/extensions'\n",
+    "\n",
+    "    if os.path.exists(folderext):\n",
+    "        shutil.rmtree(folderext)\n",
+    "\n",
+    "    os.mkdir(folderext)\n",
     "\n",
     "    !ln -vs /tmp ~/tmp\n",
     "    #\n",
@@ -509,8 +517,6 @@
     "\n",
     "            elif sub_opcion == \"3\":\n",
     "                clear_output()\n",
-    "\n",
-    "                import os\n",
     "                import zipfile\n",
     "                def zip_folder(input_folder, output_folder, max_size_mb=20):\n",
     "                    # Create the output folder if it doesn't exist\n",
@@ -553,7 +559,6 @@
     "            elif sub_opcion == \"5\":\n",
     "                !pip install -q --upgrade psutil\n",
     "                clear_output()\n",
-    "                import os\n",
     "                import psutil\n",
     "                directory = os.getcwd()\n",
     "                disk_space = psutil.disk_usage(directory)\n",
