--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -331,9 +331,8 @@
     "            extensions_code()\n",
     "\n",
     "            %cd ~/SDZ/models/Stable-diffusion\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/15236\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v3.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/130072\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/135166\n",
     "            #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
     "\n",
     "            %cd ~/SDZ/extensions/sd-webui-controlnet/models\n",
