--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -311,6 +311,9 @@
     "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/62833\n",
     "\n",
+    "    !pip cache purge\n",
+    "    !rm -rf ~/.cache\n",
+    "\n",
     "\n",
     "def opcion2():\n",
     "    clear_output()\n",
@@ -331,7 +334,7 @@
     "            extensions_code()\n",
     "\n",
     "            %cd ~/SDZ/models/Stable-diffusion\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors -O d2.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v3.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/130072\n",
     "            #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
@@ -374,6 +377,10 @@
     "            !ln -vs /tmp/clip_vision /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision\n",
     "\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/Annotators/resolve/main/clip_g.pth -d /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision -o clip_g.pth  \n",
+    "            \n",
+    "            !pip cache purge\n",
+    "            !rm -rf ~/.cache\n",
+    "            break \n",
     "\n",
     "            clear_output()\n",
     "            print(COLOR_CYAN + \"MODELS 1.5 INSTALLED\" + COLOR_RESET)\n",
@@ -425,6 +432,10 @@
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_xl_sketch.safetensors -o t2i-adapter_xl_sketch.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose.safetensors -o thibaud_xl_openpose.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose_256lora.safetensors -o thibaud_xl_openpose_256lora.safetensors\n",
+    "\n",
+    "            !pip cache purge\n",
+    "            !rm -rf ~/.cache\n",
+    "            break \n",
     "\n",
     "            clear_output()\n",
     "            print(COLOR_CYAN + \"MODELS XL INSTALLED\" + COLOR_RESET)\n",
