--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -124,8 +124,8 @@
     "    !git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
     "\n",
-    "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
-    "    #!sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
+    "    !git clone https://github.com/Gourieff/sd-webui-reactor\n",
+    "    !sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
     "\n",
     "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
@@ -134,11 +134,11 @@
     "    #!git clone https://github.com/s0md3v/sd-webui-roop\n",
     "    #!sed -i 's|shapes.append(chunk\\[\"score\"\\] > 0.7)|shapes.append(chunk[\"score\"] > 99999)|' /home/studio-lab-user/SDZ/extensions/sd-webui-roop/scripts/cimage.py\n",
     "\n",
-    "    #!git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
-    "    #!mkdir -p /tmp/animatediff_models\n",
-    "    #!rm -rd ~/SDZ/extensions/sd-webui-animatediff/model\n",
-    "    #!ln -vs /tmp/animatediff_models /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model\n",
-    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model -o mm_sd_v15_v2.ckpt\n",
+    "    !git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
+    "    !mkdir -p /tmp/animatediff_models\n",
+    "    !rm -rd ~/SDZ/extensions/sd-webui-animatediff/model\n",
+    "    !ln -vs /tmp/animatediff_models /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model -o mm_sd_v15_v2.ckpt\n",
     "\n",
     "    #!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-controlnet-animatediff\n",
@@ -336,7 +336,7 @@
     "            %cd ~/SDZ/models/Stable-diffusion\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors -o d2.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v3.safetensors\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/130072\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/143906\n",
     "            #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
     "\n",
     "            %cd ~/SDZ/extensions/sd-webui-controlnet/models\n",
@@ -459,6 +459,8 @@
     "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
     "    SDZ_Args = f\"--ngrok {ngrok_token} --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
+    "    !pip cache purge\n",
+    "    !rm -rf ~/.cache\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
     "       \n",
